# youtube-api

./: Dockerfile  README.md
.devcontainer/: devcontainer.json
app/: .gitignore  Cargo.toml
app/frontend/: package-lock.json  package.json
app/frontend/src/: App.module.scss  App.tsx
app/frontend/src/components/organizations/header/: Header.tsx
app/frontend/src/components/organizations/sidebar/: Sidebar.tsx
app/src/: env.rs  error.rs  main.rs  types.rs  util.rs
app/src/pages/: callback.rs  index.rs  mod.rs  oauth.rs  route.rs
