[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web={ version="4", features=["openssl"] }
cargo-watch = "8.4.0"
derive_more = "0.99.17"
dotenv = "0.15.0"
openssl = "0.10.46"
percent-encoding = "2.2.0"
regex = "1.7.1"
reqwest = { version="0.11.14", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
